apps/jellyfin/jellyfin-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lb
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 80
    targetPort: 8096
    protocol: TCP
